# face-detection

./: .gitignore  README.md  benchmark_results.md  benchmark_script.py  benchmark_script.sh  extract_frames.sh
decoupled_detector/: CMakeLists.txt
decoupled_detector/src/: FaceDetector.cpp  FaceDetector.hpp  main.cpp
decoupled_detector/tests/: CMakeLists.txt  test_detector.cpp
in_memory_detector/: CMakeLists.txt
in_memory_detector/src/: FaceDetector.cpp  FaceDetector.hpp  main.cpp
in_memory_detector/tests/: CMakeLists.txt  test_detector.cpp
